Add GitHub upload feature and improve UI spacing
- Add GitHub upload functionality (Gists and Repository methods)
- Remove audio column from table
- Tighten spacing throughout the UI
- Add config.example.js for GitHub token setup
- Add upload-to-github.js module
- Add GITHUB_UPLOAD_SETUP.md documentation
- Update .gitignore to exclude config.js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <div class="page-header">
                 <h2 class="page-title">共享題庫</h2>
                 <div class="header-actions">
-                    <button class="share-btn">分享題庫</button>
+                    <label for="fileUpload" class="upload-btn">
+                        <input type="file" id="fileUpload" accept=".json" style="display: none;">
+                        上傳題庫
+                    </label>
                     <div class="search-box">
                         <input type="text" id="searchInput" placeholder="搜尋題庫...">
                         <button class="search-btn" onclick="searchDecks()">搜尋</button>
@@ -43,13 +46,12 @@
                             <th>評分</th>
                             <th>修改日期</th>
                             <th>題目數</th>
-                            <th>音訊</th>
                             <th>圖片</th>
                         </tr>
                     </thead>
                     <tbody id="decksTableBody">
                         <tr>
-                            <td colspan="6" style="text-align: center; padding: 40px;">
+                            <td colspan="5" style="text-align: center; padding: 40px;">
                                 <div class="loading-spinner">載入題庫中...</div>
                             </td>
                         </tr>
@@ -59,6 +61,10 @@
         </div>
     </main>
 
+    <!-- GitHub 上傳功能（可選） -->
+    <script src="upload-to-github.js"></script>
+    <!-- 如果已設定 config.js，會自動啟用 GitHub 上傳 -->
+    <script src="config.js" onerror="console.log('未設定 config.js，將使用本地儲存')"></script>
     <script src="script.js"></script>
 </body>
 </html>
